--- a/MobitelFrontEnd/pom.xml
+++ b/MobitelFrontEnd/pom.xml
@@ -32,6 +32,13 @@
     <version>3.1.0</version>
     <scope>provided</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+<dependency>
+    <groupId>jstl</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
+
     
     
   </dependencies>
